# apps/api/internal/dto/openapi/types.gen.go
@@ -3,6 +3,25 @@
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.7.0 DO NOT EDIT.
 package openapi
 
+// AdminVerifyRequest defines model for AdminVerifyRequest.
+type AdminVerifyRequest struct {
+	Token string `json:"token"`
+}
+
+// CreateJourneyRequest defines model for CreateJourneyRequest.
+type CreateJourneyRequest struct {
+	Content   string  `json:"content"`
+	Highlight bool    `json:"highlight"`
+	Location  string  `json:"location"`
+	Name      string  `json:"name"`
+	Thumbnail *string `json:"thumbnail,omitempty"`
+}
+
+// CreateJourneyResponse defines model for CreateJourneyResponse.
+type CreateJourneyResponse struct {
+	Id int64 `json:"id"`
+}
+
 // HealthResponse defines model for HealthResponse.
 type HealthResponse struct {
 	Status string `json:"status"`
@@ -10,11 +29,25 @@ type HealthResponse struct {
 
 // Journey defines model for Journey.
 type Journey struct {
-	Location  string `json:"location"`
+	Id        int64   `json:"id"`
+	Location  string  `json:"location"`
+	Name      string  `json:"name"`
+	Thumbnail *string `json:"thumbnail"`
+	Timestamp string  `json:"timestamp"`
+}
+
+// JourneyContent defines model for JourneyContent.
+type JourneyContent struct {
+	Content   string `json:"content"`
 	Name      string `json:"name"`
-	Thumbnail string `json:"thumbnail"`
 	Timestamp string `json:"timestamp"`
 }
 
 // JourneysResponse defines model for JourneysResponse.
 type JourneysResponse = []Journey
+
+// VerifyAdminJSONRequestBody defines body for VerifyAdmin for application/json ContentType.
+type VerifyAdminJSONRequestBody = AdminVerifyRequest
+
+// CreateJourneyJSONRequestBody defines body for CreateJourney for application/json ContentType.
+type CreateJourneyJSONRequestBody = CreateJourneyRequest
